--- a/public_html/ckeditor/plugins/ckeditor_wiris/configuration.ini
+++ b/public_html/ckeditor/plugins/ckeditor_wiris/configuration.ini
@@ -49,9 +49,9 @@ CAS_height = 400
 
 # Only for PHP integration.
 wirisproxy = false
-#wirisproxy_host = 
-#wirisproxy_port = 
-#wirisconfigurationclass = TestConfigurationUpdater.php;com_wiris_plugin_configuration_TestConfigurationUpdater
+wirisproxy_host = www.6bey.com
+wirisproxy_port = 80
+wirisconfigurationclass = TestConfigurationUpdater.php;com_wiris_plugin_configuration_TestConfigurationUpdater
 
 # Only for java integration.
 #wirisstorageclass = com.wiris.plugin.storage.FileStorageAndCache
