--- a/public_html/ckeditor/plugins/ckeditor_wiris/configuration.ini
+++ b/public_html/ckeditor/plugins/ckeditor_wiris/configuration.ini
@@ -61,7 +61,7 @@ wirisconfigurationrefreshtime = 10000
 #wirisintegrationpath = http://localhost:8080/pluginwiris_engine
 
 # Place to store the cached images.
-#wiriscachedirectory = /var/cache
+wiriscachedirectory = /data/formula/cache
 
 # Place to store the formulas.
-#wirisformuladirectory = /var/formulas
+wirisformuladirectory = /data/formula/formulas
