--- a/public_html/ckeditor/plugins/ckeditor_wiris/configuration.ini
+++ b/public_html/ckeditor/plugins/ckeditor_wiris/configuration.ini
@@ -49,8 +49,8 @@ CAS_height = 400
 
 # Only for PHP integration.
 wirisproxy = false
-wirisproxy_host = www.6bey.com
-wirisproxy_port = 80
+wirisproxy_host = 
+wirisproxy_port = 
 wirisconfigurationclass = TestConfigurationUpdater.php;com_wiris_plugin_configuration_TestConfigurationUpdater
 
 # Only for java integration.
@@ -61,7 +61,7 @@ wirisconfigurationrefreshtime = 10000
 #wirisintegrationpath = http://localhost:8080/pluginwiris_engine
 
 # Place to store the cached images.
-wiriscachedirectory = /data/formula/cache
+#wiriscachedirectory = /data/formula/cache
 
 # Place to store the formulas.
-wirisformuladirectory = /data/formula/formulas
+#wirisformuladirectory = /data/formula/formulas
